# CircuitCider

./: .gitmodules  Cargo.toml  README.md
.github/: build_test.yaml  pull_request_template.md
.github/workflows/: build_test.yml
assets/model_pkg/models/: base.glb  caster_wheel.glb  caster_wheel_decimated.mtl  left_wheel_decimated.mtl  right_wheel_decimated.mtl  robot_gun.glb
assets/model_pkg/urdf/: diff_bot.xml
assets/models/hulls/: base.glb
assets/models/motors/: motor.glb
assets/models/source/: base.FCStd  motor.FCStd  wheel.FCStd
assets/models/weapons/: mace.glb  robot_gun.glb
assets/models/wheels/: wheel(old).glb
assets/shaders/: flow_wireframe.wgsl  grid.wgsl  neon.wgsl
crates/app_core/: Cargo.toml
crates/app_core/src/: lib.rs  plugins.rs
crates/app_internal/: Cargo.toml
crates/app_internal/src/: lib.rs
crates/app_source/: Cargo.toml
crates/app_source/src/: lib.rs
crates/combat/: Cargo.toml
crates/combat/examples/: mace_world.rs  testing_world.rs  weapons_test.rs
crates/combat/src/: asset_loader.rs  components.rs  despawn.rs  lib.rs  main.rs  ui.rs
crates/combat/src/thrusters/: mod.rs  plugins.rs  systems.rs
crates/combat/src/weapon_attacks/: fire_shot.rs  mod.rs  plugins.rs
crates/combat/src/weapons/: collision.rs  mod.rs  plugins.rs  systems.rs
crates/editor_ui/: Cargo.toml
crates/mesh_core/: Cargo.toml
crates/mesh_core/examples/: mesh_testing.rs
crates/mesh_core/src/: arrow.rs  cone.rs  lib.rs  ui.rs
crates/picking_core/: Cargo.toml
crates/picking_core/src/: components.rs  lib.rs  plugins.rs  systems.rs
crates/robot_ai/: Cargo.toml
crates/robot_ai/examples/: ai_testing.rs
crates/robot_editor/: Cargo.toml
crates/robot_editor/examples/: editor_testing.rs  model_display_scene_test.rs
crates/robot_editor/src/: components.rs  lib.rs  plugins.rs  resources.rs  states.rs  systems.rs  ui.rs
crates/robot_editor/src/archive/selection_behaviour/: plugins.rs
crates/robot_editor/src/archive/selection_behaviour(OLD)/: debug.rs  mod.rs
crates/robot_editor/src/archive/transform_gizmo/: components.rs  plugins.rs
crates/robot_editor/src/archive/transform_gizmo(DEPRECATED)/: plugins.rs  systems(old).rs  systems.rs
crates/robot_editor/src/assembling/: components.rs  mod.rs  plugins.rs  systems.rs  ui.rs
crates/robot_editor/src/attaching/: components.rs  mod.rs  plugins.rs  systems.rs  ui.rs
crates/robot_editor/src/camera_controls/: plugins.rs
crates/robot_editor/src/model_display/: components.rs  mod.rs  plugins.rs  systems.rs
crates/robot_editor/src/picking/: components.rs  mod.rs  plugins.rs  systems.rs
crates/robot_editor/src/placing/: components.rs  mod.rs  plugins.rs  resources.rs  systems.rs  ui.rs
crates/robot_editor/src/raycast_utils/: debug.rs  mod.rs  plugins.rs  resources.rs  systems.rs
crates/robot_editor/src/selection_behaviour/: components.rs  plugins.rs  systems.rs
crates/robot_editor/src/shaders/: mod.rs  neon_glow.rs  neon_glow.wgsl  plugins.rs
crates/robot_editor/src/transform_gizmo/: components.rs  mod.rs  plugins.rs  systems(old).rs  systems.rs
crates/shader_core/: Cargo.toml
crates/shader_core/assets/shaders/: glow.wgsl  grid.wgsl  neon_glow.wgsl
crates/shader_core/examples/: shader_testing.rs
crates/shader_core/src/: lib.rs  plugins.rs  resources.rs  systems.rs  tree.rs
crates/shader_core/src/shaders/: flow_wireframe.rs  glow.rs  grid.rs  mod.rs  neon.rs  neon_glow.rs  plugins.rs
crates/ui_core/: Cargo.toml
crates/ui_core/examples/: ui_test.rs
crates/ui_core/src/: components.rs  lib.rs  plugins.rs  states.rs  ui.rs
examples/: template_world.rs
src/: main.rs
src/serialization/: mod.rs
src/ui/: mod.rs  ui.rs
