[package]
name = "CircuitCider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.14", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.25"
bevy_egui = "0.28"
egui = "0.28"
bevy_serialization_extras = "0.5.0"
bevy_serialization_urdf = "0.3"
bevy_camera_extras = "0.12"
#bevy_component_extras = "*"
bevy_ui_extras = "0.10.0"
bevy_rapier3d = "0.27"
strum = "0.26"
strum_macros = "0.26"
bevy_mod_raycast = "0.18.0"

robot_editor = {path = "./crates/robot_editor", version = "0.1"}
app_core = {path = "./crates/app_core", version = "0.1"}
ui_core = {path = "./crates/ui_core", version = "0.1"}


[workspace]
members = [
    "crates/*"
]


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


#bevy_flycam = "0.12"

#bevy_quickmenu = "0.2.0"


