[package]
name = "CircuitCider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
bevy_egui = {workspace = true}
egui = {workspace = true}
bevy_serialization_extras = {workspace = true}
bevy_serialization_urdf = {workspace = true}
bevy_camera_extras = {workspace = true}
bevy_ui_extras = {workspace = true}
bevy_rapier3d = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
bevy_mod_raycast = {workspace = true}
app_core = {workspace = true}
ui_core = {workspace = true}
robot_editor = {workspace = true}
combat = {workspace = true}

[workspace.dependencies]
bevy_toon_shader = {git = "https://github.com/rydb/bevy_toon_shader", rev = "1b96d3e"}
bevy = {version = "0.15", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.28"
bevy_egui = "0.31"
egui = "0.29"
bevy_serialization_extras = "0.8.0"
bevy_serialization_urdf = "0.5"
bevy_camera_extras = "0.15"
bevy_ui_extras = "0.17.0"
bevy_rapier3d = "0.28"
bevy_app = "0.15"
bevy_asset = "0.15"
bevy_obj = "0.15"
strum = "0.26"
strum_macros = "0.26"
bevy_mod_raycast = "0.18.0"
bevy_mod_outline = "0.9"
transform-gizmo-bevy = "0.4"
bevy_mod_picking = "0.20"
derive_more = "1.0"
bevy_asset_loader = "0.22"
egui_extras = "0.30"

robot_editor = {path = "./crates/robot_editor", version = "0.1"}
app_core = {path = "./crates/app_core", version = "0.1"}
ui_core = {path = "./crates/ui_core", version = "0.1"}
shader_core = {path = "./crates/shader_core", version = "0.1"}
combat = {path = "./crates/combat", version = "0.1"}

[workspace]
members = [
    "crates/*"
]


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


#bevy_flycam = "0.12"

#bevy_quickmenu = "0.2.0"


