[package]
name = "CircuitCider"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true, features = ["dynamic_linking", "trace_tracy"]}
bevy-inspector-egui = {workspace = true}
bevy_egui = {workspace = true}
egui = {workspace = true}
bevy_serialization_extras = {workspace = true}
bevy_camera_extras = {workspace = true}
bevy_ui_extras = {workspace = true}
bevy_rapier3d = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
app_core = {workspace = true}
ui_core = {workspace = true}
robot_editor = {workspace = true}
combat = {workspace = true}

[workspace.dependencies]
bevy_toon_material = {git = "https://github.com/rydb/bevy_toon_material", rev = "cd1bae5599e8d3654014f0174035a19483192283"}
bevy = {version = "0.15", features = ["dynamic_linking"]}
bevy_picking = {version = "0.15"}
bevy-inspector-egui = "0.30"
bevy_egui = "0.33"
egui = "0.31"
# bevy_serialization_extras = {version = "0.9.0-beta.0", features = ["default"]}
# bevy_serialization_assemble = {version = "0.2.0-beta.0"}
bevy_serialization_assemble = {path = "../bevy_serialization_extras/crates/bevy_serialization_assemble"}
bevy_serialization_extras = {path = "../bevy_serialization_extras"}

bevy_camera_extras = "0.15"
bevy_ui_extras = "0.19.0"
bevy_rapier3d = "0.29"
bevy_app = "0.15"
bevy_derive = "0.15"
bevy_reflect = "0.15"
bevy_ecs = "0.15"
bevy_asset = "0.15"
bevy_state = "0.15"
bevy_utils = "0.15"
bevy_input = "0.15"
bevy_hierarchy = "0.15"
bevy_math = "0.15"
bevy_transform = "0.15"
bevy_pbr = "0.15"
bevy_core = "0.15"
bevy_render = "0.15"
bevy_core_pipeline = "0.15"
bevy_color = "0.15"
strum = "0.27"
strum_macros = "0.27"
bevy_mod_outline = "0.9.1"
# bevy_mod_outline = {git = "https://github.com/komadori/bevy_mod_outline", rev = "3bd8357c656f6100c3fe13a2d6bab50f6de72a6f"}
transform-gizmo-bevy = {git = "https://github.com/rydb/transform-gizmo", rev = "e27eb861370097124931a5463aee7366b333b22a"}
derive_more = {version = "2.0", features = ["from"]}
bevy_asset_loader = "0.22"
egui_extras = "0.31"

robot_editor = {path = "./crates/robot_editor", version = "0.1"}
picking_core = {path = "./crates/picking_core", version = "0.1"}
app_internal = {path = "./crates/app_internal", version = "0.1"}
app_core = {path = "./crates/app_core", version = "0.1"}
ui_core = {path = "./crates/ui_core", version = "0.1"}
shader_core = {path = "./crates/shader_core", version = "0.1"}
combat = {path = "./crates/combat", version = "0.1"}

[workspace]
members = [
    "crates/*"
]


# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


#bevy_flycam = "0.12"

#bevy_quickmenu = "0.2.0"


