[package]
name = "app_core"
version = "0.1.0"
edition = "2021"
description = "core stuff other crates rely on that doesn't justify its own crate."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_asset = "0.13"
bevy_app = "0.13"
bevy_obj = "0.13"