[package]
name = "app_internal"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_app = {workspace = true}
shader_core = {workspace = true}
picking_core = {workspace = true}
combat = {workspace = true}
bevy_serialization_assemble = {workspace = true}
bevy_serialization_extras = {workspace = true}
bevy_rapier3d = {workspace = true}