[package]
name = "combat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
egui = {workspace = true}
bevy_rapier3d = {workspace = true}
app_core = {workspace = true}
bevy_serialization_assemble = {workspace = true}
bevy_serialization_extras = {workspace = true}


[dev-dependencies]
app_internal = {workspace = true, features = ["serialization", "physics", "picking"]}
