[package]
name = "mesh_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.24"

strum = "0.26"
strum_macros = "0.26"