[package]
name = "mesh_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
bevy_ui_extras = {workspace = true}
egui_extras = {workspace = true}

strum = {workspace = true}
strum_macros = {workspace = true}