[package]
name = "picking_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = {workspace = true}
bevy_picking = {workspace = true}
bevy_reflect = {workspace = true}
bevy_derive = {workspace = true}
bevy_hierarchy = {workspace = true}
bevy_state = {workspace = true}
bevy_app = {workspace = true}
bevy_utils = {workspace = true}
bevy_input = {workspace = true}