[package]
name = "robot_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = {path = "../app_core", version = "0.1"}
bevy = {version = "0.14", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.26"
bevy_egui = "0.29"
egui = "0.28"
#egui_extras = { version = "0.26", features = ["all_loaders", "image", "file"] }
#image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for

bevy_serialization_extras = "0.6.0"
bevy_serialization_urdf = "0.4"
bevy_mod_outline = "0.8"
#bevy_transform_gizmo = {git = "https://github.com/rydb/bevy_transform_gizmo", rev="dada826"}
transform-gizmo-bevy = "0.3"
bevy_mod_picking = {version = "0.20", features = ["backend_egui"]}
bevy_camera_extras = "0.13"
bevy_mod_raycast = "0.18.0"
bevy_obj = "0.14"
bevy_ui_extras = "0.12.0"
bevy_rapier3d = "0.27"
strum = "0.26"
strum_macros = "0.26"
bevy_toon_shader = {git = "https://github.com/rydb/bevy_toon_shader", rev = "4aa9b6b"}
#async-trait = "*"

# parrallize compile
[build]
rustflags = ["-Z", "threads=8"]