[package]
name = "robot_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = {path = "../app_core", version = "0.1"}
shader_core = {path = "../shader_core", version = "0.1"}
bevy = {version = "0.14", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.27"
bevy_egui = "0.30"
egui = "0.29"
#egui_extras = { version = "0.26", features = ["all_loaders", "image", "file"] }
#image = { version = "0.24", features = ["jpeg", "png"] } # Add the types you want support for

bevy_serialization_extras = "0.6.0"
bevy_serialization_urdf = "0.4"
bevy_mod_outline = "0.8"
#bevy_transform_gizmo = {git = "https://github.com/rydb/bevy_transform_gizmo", rev="dada826"}
transform-gizmo-bevy = "0.4"
bevy_mod_picking = {version = "0.20", features = ["backend_egui", "backend_raycast"]}
bevy_camera_extras = "0.14"
bevy_mod_raycast = "0.18.0"
bevy_obj = "0.14"
bevy_ui_extras = "0.13.0"
bevy_rapier3d = "0.27"
strum = "0.26"
strum_macros = "0.26"
bevy_asset_loader = "0.21"
bevy_toon_shader = {git = "https://github.com/rydb/bevy_toon_shader", rev = "1b96d3e"}
#async-trait = "*"

# parrallize compile
[build]
rustflags = ["-Z", "threads=8"]


# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1