[package]
name = "robot_editor"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_core = {workspace = true}
picking_core = {workspace = true}
shader_core = {workspace = true}
bevy = {workspace = true}
bevy-inspector-egui = {workspace = true}
bevy_egui = {workspace = true}
egui = {workspace = true}
combat = {workspace = true}
bevy_serialization_extras = {workspace = true}
bevy_serialization_assemble = {workspace = true}
bevy_picking = {workspace = true}
bevy_mod_outline = {workspace = true}
app_internal = {workspace = true}
transform-gizmo-bevy = {workspace = true}
bevy_camera_extras = {workspace = true}
bevy_ui_extras = {workspace = true}
bevy_rapier3d = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
bevy_asset_loader = {workspace = true}
derive_more = {workspace = true}
bevy_toon_material = {workspace = true}
#async-trait = "*"

# parrallize compile
# [build]
# rustflags = ["-Z", "threads=8"]


# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

# # Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1