[package]
name = "shader_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {workspace = true}
#bevy = {version = "0.14", features = ["file_watcher"]}
app_core = {workspace = true}
bevy_toon_material = {workspace = true}

derive_more = {workspace = true}

[dev-dependencies]
bevy_camera_extras = {workspace = true}
