[package]
name = "shader_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = {workspace = true}
bevy_asset = {workspace = true}
bevy_app = {workspace = true}
bevy_transform = {workspace = true}
bevy_core_pipeline = {workspace = true}
bevy_render = {workspace = true}
bevy_utils = {workspace = true}
bevy_derive = {workspace = true}
bevy_core = {workspace = true}
bevy_math = {workspace = true}
bevy_color = {workspace = true}
bevy_pbr = {workspace = true}
bevy_reflect = {workspace = true}
app_core = {workspace = true}
bevy_toon_material = {workspace = true}
bevy_mod_outline = {workspace = true}


derive_more = {workspace = true}

[dev-dependencies]
app_internal = {workspace = true}
bevy = {workspace = true, features = ["dynamic_linking"]}
bevy_camera_extras = {workspace = true}
