[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
description = "(mostly) stabalized ui features. "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robot_editor = {path = "../robot_editor", version = "0.1"}
app_core = {path = "../app_core", version = "0.1"}

bevy = {version = "0.13", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.23"
bevy_egui = "0.25"
egui = "0.26"
bevy_serialization_extras = "0.4"
bevy_serialization_urdf = "0.2"
bevy_camera_extras = "0.2"
#bevy_component_extras = "*"
bevy_ui_extras = "0.5"
bevy_rapier3d = "0.25"
strum = "0.26"
strum_macros = "0.26"