[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"
description = "(mostly) stabalized ui features. "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robot_editor = {path = "../robot_editor", version = "0.1"}
app_core = {path = "../app_core", version = "0.1"}

bevy = {workspace = true, features = ["dynamic_linking"]}
bevy-inspector-egui = {workspace = true}
bevy_egui = {workspace = true}
egui = {workspace = true}
bevy_serialization_extras = {workspace = true}
bevy_serialization_urdf = {workspace = true}
bevy_camera_extras = {workspace = true}
#bevy_component_extras = "*"
bevy_ui_extras = {workspace = true}
bevy_rapier3d = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}